--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "msg-ai",
-  "version": "2.0.2",
+  "version": "2.0.4",
   "description": "Multi-provider AI chat CLI with Vercel AI SDK - Bun optimized",
   "main": "./dist/index.cjs",
   "type": "module",
   "zshy": {
-    "bin": "./src/index.ts",
+    "bin": "./src/cli.ts",
+    "cjs": false,
     "exports": {
       ".": "./src/index.ts"
     }
   },
   "scripts": {
-    "dev": "bun run src/index.ts",
+    "dev": "bun run src/cli.ts",
     "build": "zshy",
     "test": "bun test",
     "lint": "eslint src",
@@ -69,13 +70,12 @@
     "zshy": "^0.3.5"
   },
   "module": "./dist/index.js",
-  "types": "./dist/index.d.cts",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.cts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
     }
   },
-  "bin": "./dist/index.cjs"
+  "bin": "./dist/cli.js"
 }
